Fix color contrast for copy button (#704)
When hovering with the mouse over the "Copy" button,
switch to bold font and set color and background color
accordingly.

* Activated: black (VG) / $c_fog (BG), color contrast 18.26 : 1
* Hovered: $c_pine (VG) / $c_mint_30, color contrast 13.92 : 1

--- a/source-assets/styles2022/sass/custom/content-mono-verbatim.sass
+++ b/source-assets/styles2022/sass/custom/content-mono-verbatim.sass
@@ -189,12 +189,12 @@ article
     display: inline-block
     font-family: $f_sans
     font-size: 12px
-    height: 26px
-    line-height: 26px
+    height: 27px
+    line-height: 27px
     margin: 5px
     outline: none
     overflow: hidden
-    padding: 0 5px 0 25px
+    padding: 0 6px 0 26px
     text-align: left
     text-transform: uppercase
     position: absolute
@@ -209,9 +209,10 @@ article
 
   > .clip-button:hover,
   > .clip-button:focus
-    background-color: $c_dark_jungle
-    color: $c_fog
-    background-image: url('data:image/svg+xml;utf-8,<svg xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 16 16" y="0px" x="0px" width="16" height="16"><path fill="white" d="m 14,1 v 12 h -2 v -1 h 1 V 2 H 5 V 2 H 4 V 1 Z" /><path fill="white" d="M 2,3 V 15 H 12 V 3 Z m 1,1 h 8 V 14 H 3 Z M 4,6 V 7 H 8 V 6 Z m 0,2 v 1 h 6 V 8 Z m 0,2 v 1 h 3 v -1 z" /></svg>')
+    font-weight: bold
+    background-color: $c_mint_30
+    color: $c_pine
+    background-image: url('data:image/svg+xml;utf-8,<svg xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 16 16" y="0px" x="0px" width="16" height="16"><path fill="#{$c_pine_url}" d="m 14,1 v 12 h -2 v -1 h 1 V 2 H 5 V 2 H 4 V 1 Z" /><path fill="#{$c_pine_url}" d="M 2,3 V 15 H 12 V 3 Z m 1,1 h 8 V 14 H 3 Z M 4,6 V 7 H 8 V 6 Z m 0,2 v 1 h 6 V 8 Z m 0,2 v 1 h 3 v -1 z" /></svg>')
 
   &.copy-success
     > div,
